--- a/web/css/login.css
+++ b/web/css/login.css
@@ -59,7 +59,7 @@
   /* IE6-9 */
 }
 html {
-  background: url(../images/bgl.jpeg) no-repeat center center fixed;
+  background: url(../images/bgk.jpg) no-repeat center center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
